--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <link rel="stylesheet" href="./port.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 <div id="header">
@@ -88,8 +88,8 @@
             <hr>
         </div>
         <div class="abbb">
-            <p class="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum, molestias incidunt eos aliquam aspernatur tempore? Facilis, iusto sit. Reiciendis dolores porro ducimus ab nesciunt recusandae perferendis ullam quae nemo?</p>
-            <p class="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum, molestias incidunt eos aliquam aspernatur tempore? Facilis, iusto sit. Reiciendis dolores porro ducimus ab nesciunt recusandae perferendis ullam quae nemo?</p>
+            <p class="para1">I am a person who graduated from high school with a degree in Computer Science and then continued the University through Physics, dedicated myself learning Computer Programming and  improve my skills by doing a lot of practice  </p>
+            <p class="para1">I have been interested in computer since childhood. Over years, this interest increased and i decided to go for computer programmingn college. Now i have devoted software and I am constantly improving myself.</p>
         </div>
         <div class="free">
             <button class="down">Free Download!</button>
@@ -121,14 +121,14 @@
 <div>
     <div class="main6">
         <div class="final">
-            <p class="loc"><span> LOCATION </span><br><br> Turkey/Istanbul 34882</p>
+            <p class="loc"><span> LOCATION </span><br><br> Akobo,Ibadan/Oyo State</p>
         </div>
         <div class="final1">
             <p class="loc"><span> AROUND THE WEB </span></p>
         </div>
         <div class="final2">
             <p class="loc"> <span> ABOUT FREELANCER </span></p>
-            <p class="looo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, eius iure. Repellat vel numquam, ea nulla animi sequi velit suscipit, consectetur molestiae aliquid quos! Magni aut voluptate deleniti pariatur repellat.</p>
+            <p class="looo">Freelance, freelancer, or freelance worker, are terms commonly used for a person who is self employed and not necessarily committed to a particular employer long term</p>
         </div>
     </div>
 </div>
