--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@
         </div>
         <div class="final1">
             <p class="loc"><span> AROUND THE WEB </span></p>
+            <div class="llogo">
+                <img src="./ig-removebg-preview.png" alt="" class="llll">
+                <img src="./tw-removebg-preview.png" alt="" class="llll">
+                <img src="./yt-removebg-preview.png" alt="" class="llll">
+            </div>
+            
         </div>
         <div class="final2">
             <p class="loc"> <span> ABOUT FREELANCER </span></p>
