--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
                 
             </div>
             <div class="radius1" >
-                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./cake-removebg-preview.png" alt="" class="house"></a>
+                <a href="https://weatherapprey.netlify.app/" target="_blank"><img src="./cake-removebg-preview.png" alt="" class="house"></a>
             </div>
             <div class="radius2" >
-                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./redtent-removebg-preview.png" alt="" class="house"></a>
+                <a href="https://weatherapprey.netlify.app/" target="_blank"><img src="./redtent-removebg-preview.png" alt="" class="house"></a>
             </div>
         </div>
         <div class="contt">
             <div class="radius" >
-                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./pad-removebg-preview.png" alt="" class="house"></a>
+                <a href="https://weatherapprey.netlify.app/" target="_blank"><img src="./pad-removebg-preview.png" alt="" class="house"></a>
             </div>
             <div class="radius1" >
-                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./bin.jpeg" alt="" class="house"></a>
+                <a href="https://weatherapprey.netlify.app/" target="_blank"><img src="./bin.jpeg" alt="" class="house"></a>
             </div>
             <div class="radius2" >
-                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./plane-removebg-preview.png" alt="" class="house"></a>
+                <a href="https://weatherapprey.netlify.app/" target="_blank"><img src="./plane-removebg-preview.png" alt="" class="house"></a>
             </div>
         </div>
     </div>
