--- a/index.html
+++ b/index.html
@@ -53,25 +53,26 @@
             <hr class="hr1">
         </div>
         <div class="contt">
-            <div class="radius" >
-                <img src="./house-removebg-preview.png" alt="" class="house">
+            <div class="radius" > 
+                <a href="http://www.portfoliorey.netlify.app/" target="_blank"><img src="./house-removebg-preview.png" alt="" class="house"></a>
+                
             </div>
             <div class="radius1" >
-                <img src="./cake-removebg-preview.png" alt="" class="house">
+                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./cake-removebg-preview.png" alt="" class="house"></a>
             </div>
             <div class="radius2" >
-                <img src="./redtent-removebg-preview.png" alt="" class="house">
+                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./redtent-removebg-preview.png" alt="" class="house"></a>
             </div>
         </div>
         <div class="contt">
             <div class="radius" >
-                <img src="./pad-removebg-preview.png" alt="" class="house">
+                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./pad-removebg-preview.png" alt="" class="house"></a>
             </div>
             <div class="radius1" >
-                <img src="./bin.jpeg" alt="" class="house">
+                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./bin.jpeg" alt="" class="house"></a>
             </div>
             <div class="radius2" >
-                <img src="./plane-removebg-preview.png" alt="" class="house">
+                <a href="http://www.weatherapprey.netlify.app/" target="_blank"><img src="./plane-removebg-preview.png" alt="" class="house"></a>
             </div>
         </div>
     </div>
