--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="contt">
             <div class="radius" > 
-                <a href="http://www.portfoliorey.netlify.app/" target="_blank"><img src="./house-removebg-preview.png" alt="" class="house"></a>
+                <a href="https://portfoliorey.netlify.app/" target="_blank"><img src="./house-removebg-preview.png" alt="" class="house"></a>
                 
             </div>
             <div class="radius1" >
